@@ -23,6 +23,7 @@
       <w>programmatically</w>
       <w>searchform</w>
       <w>socialbck</w>
+      <w>templatepath</w>
       <w>tinyurl</w>
       <w>widgettitle</w>
       <w>wpfa</w>
